@@ -241,7 +241,7 @@ sub _process_json_page {
         my $json            = [ { 'name' => 'macros', 'data' => $objects } ];
         if($c->stash->{conf_config}->{'show_plugin_syntax_helper'}) {
             if(defined $c->{'request'}->{'parameters'}->{'plugin'} and $c->{'request'}->{'parameters'}->{'plugin'} ne '') {
-                my $help = $self->_get_plugin_help($c, $c->{'request'}->{'parameters'}->{'plugin'});
+                my $help = $c->{'obj_db'}->get_plugin_help($c, $c->{'request'}->{'parameters'}->{'plugin'});
                 my @options = $help =~ m/(\-[\w\d]|\-\-[\d\w\-_]+)[=|,|\s|\$]/gmx;
                 push @{$json}, { 'name' => 'arguments', 'data' => Thruk::Utils::array_uniq(\@options) } if scalar @options > 0;
             }
@@ -253,7 +253,7 @@ sub _process_json_page {
 
     # plugins
     if($type eq 'plugin') {
-        my $plugins         = $self->_get_plugins($c);
+        my $plugins         = $c->{'obj_db'}->get_plugins($c);
         my $json            = [ { 'name' => 'plugins', 'data' => [ sort keys %{$plugins} ] } ];
         $c->stash->{'json'} = $json;
         $c->forward('Thruk::View::JSON');
@@ -262,7 +262,7 @@ sub _process_json_page {
 
     # plugin help
     if($type eq 'pluginhelp' and $c->stash->{conf_config}->{'show_plugin_syntax_helper'}) {
-        my $help            = $self->_get_plugin_help($c, $c->{'request'}->{'parameters'}->{'plugin'});
+        my $help            = $c->{'obj_db'}->get_plugin_help($c, $c->{'request'}->{'parameters'}->{'plugin'});
         my $json            = [ { 'plugin_help' => $help } ];
         $c->stash->{'json'} = $json;
         $c->forward('Thruk::View::JSON');
@@ -271,7 +271,7 @@ sub _process_json_page {
 
     # plugin preview
     if($type eq 'pluginpreview' and $c->stash->{conf_config}->{'show_plugin_syntax_helper'}) {
-        my $output          = $self->_get_plugin_preview($c,
+        my $output          = $c->{'obj_db'}->get_plugin_preview($c,
                                                          $c->{'request'}->{'parameters'}->{'command'},
                                                          $c->{'request'}->{'parameters'}->{'args'},
                                                          $c->{'request'}->{'parameters'}->{'host'},
@@ -1974,117 +1974,6 @@ sub _list_references {
     $c->stash->{'outgoing'} = $outgoing;
     $c->stash->{'template'} = 'conf_objects_listref.tt';
     return;
-}
-
-##########################################################
-sub _get_plugins {
-    my($self, $c) = @_;
-
-    my $user_macros = Thruk::Utils::read_resource_file($c->{'obj_db'}->{'config'}->{'obj_resource_file'});
-    my $objects         = {};
-    for my $macro (keys %{$user_macros}) {
-        my $dir = $user_macros->{$macro};
-        $dir = $dir.'/.';
-        next unless -d $dir;
-        if($dir =~ m|/plugins/|mx or $dir =~ m|/libexec/|mx) {
-            $self->_set_plugins_for_directory($c, $dir, $macro, $objects);
-        }
-    }
-    return $objects;
-}
-
-##########################################################
-sub _set_plugins_for_directory {
-    my($self, $c, $dir, $macro, $objects) = @_;
-    my $files = $c->{'obj_db'}->_get_files_for_folder($dir);
-    for my $file (@{$files}) {
-        next if $file =~ m/\/utils\.pm/mx;
-        next if $file =~ m/\/utils\.sh/mx;
-        next if $file =~ m/\/p1\.pl/mx;
-        if(-x $file) {
-            my $shortfile = $file;
-            $shortfile =~ s/$dir/$macro/gmx;
-            $objects->{$shortfile} = $file;
-        }
-    }
-    return $objects;
-}
-
-##########################################################
-sub _get_plugin_help {
-    my($self, $c, $name) = @_;
-    my $help = 'help is only available for plugins!';
-    return $help unless defined $name;
-
-    my $cmd;
-    my $plugins         = $self->_get_plugins($c);
-    my $objects         = $c->{'obj_db'}->get_objects_by_name('command', $name);
-    if(defined $objects->[0]) {
-        my($file,$args) = split/\s+/mx, $objects->[0]->{'conf'}->{'command_line'}, 2;
-        my $user_macros = Thruk::Utils::read_resource_file($c->{'obj_db'}->{'config'}->{'obj_resource_file'});
-        ($file)         = $c->{'db'}->_get_replaced_string($file, $user_macros);
-        if(-x $file and ( $file =~ m|/plugins/|mx or $file =~ m|/libexec/|mx)) {
-            $cmd = $file;
-        }
-    }
-    if(defined $plugins->{$name}) {
-        $cmd = $plugins->{$name};
-    }
-    if(defined $cmd) {
-        eval {
-            local $SIG{ALRM} = sub { die('alarm'); };
-            alarm(5);
-            $cmd = $cmd." -h 2>/dev/null";
-            $help = `$cmd`;
-            alarm(0);
-        }
-    }
-    return $help;
-}
-
-##########################################################
-sub _get_plugin_preview {
-    my($self,$c,$command,$args,$host,$service) = @_;
-
-    my $output = 'plugin preview is only available for plugins!';
-    return $output unless defined $args;
-
-    my $macros = $c->{'db'}->_get_macros({skip_user => 1, args => [split/\!/mx, $args]});
-    $macros    = Thruk::Utils::read_resource_file($c->{'obj_db'}->{'config'}->{'obj_resource_file'}, $macros);
-
-    if(defined $host and $host ne '') {
-        my $objects = $c->{'obj_db'}->get_objects_by_name('host', $host);
-        if(defined $objects->[0]) {
-            $macros = $objects->[0]->get_macros($c->{'obj_db'}, $macros);
-        }
-    }
-
-    if(defined $service and $service ne '' and $service ne 'undefined') {
-        my $objects = $c->{'obj_db'}->get_objects_by_name('service', $service, 0, 'ho:'.$host);
-        if(defined $objects->[0]) {
-            $macros = $objects->[0]->get_macros($c->{'obj_db'}, $macros);
-        }
-    }
-
-    my $cmd;
-    my $objects         = $c->{'obj_db'}->get_objects_by_name('command', $command);
-    if(defined $objects->[0]) {
-        my($file,$cmd_args) = split/\s+/mx, $objects->[0]->{'conf'}->{'command_line'}, 2;
-        ($file)    = $c->{'db'}->_get_replaced_string($file, $macros);
-        if(-x $file and ( $file =~ m|/plugins/|mx or $file =~ m|/libexec/|mx)) {
-            ($cmd) = $c->{'db'}->_get_replaced_string($objects->[0]->{'conf'}->{'command_line'}, $macros);
-        }
-    }
-    if(defined $cmd) {
-        eval {
-            local $SIG{ALRM} = sub { die('alarm'); };
-            alarm(45);
-            $cmd = $cmd." 2>/dev/null";
-            $output = `$cmd`;
-            alarm(0);
-        }
-    }
-    return $output;
 }
 
 ##########################################################
